# AI

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/image_clustering/: CMakeLists.txt  main.cpp
examples/sin_approximation/: CMakeLists.txt  main.cpp
src/: Data.h  NN.h
